fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@ button:active {
     background-color: white;
     font-size: 2rem;
     text-align: right;
+    overflow-x: hidden;
+    position: relative;
+    clip-path: inset( 0 0 0 0 )
+}
+
+#resultsField {
+    position: absolute;
+    text-align: right;
+    right: 0.5rem;
+    overflow-x: hidden;
 }
 
 .prime-button {
